# bshelf

./: .gitignore  Cargo.toml  LICENSE  README.md
refman/: Cargo.toml  get_doi.py
refman/projects/: project1.json  testproj.json
refman/src/: lib.rs  main.rs  main_cli.rs
src/: app.rs  events.rs  keybindings.rs  lib.rs  main.rs  ui.rs
