[package]
name = "refman"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
ratatui = "0.27"
crossterm = "0.28"
biblatex = "0.11.0"
crossref = "0.2.2"
